# onavsim_pi

./: CMakeLists.txt  README.md  onavsim_pi.fbp
po/: POTFILES.in  onavsim_pi.pot
src/: AisMaker.cpp  AisMaker.h  icons.cpp  icons.h  onavsimOverlayFactory.cpp  onavsimOverlayFactory.h  onavsimUIDialog.cpp  onavsimUIDialog.h  onavsimUIDialogBase.cpp  onavsimUIDialogBase.h  onavsim_pi.cpp  onavsim_pi.h
